<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_books"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_new_book"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/et_book_filepath"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:hint="@string/default_filepath"
                android:focusable="false"
                android:textColorHint="@color/grey"
                android:background="@drawable/edit_text_rounded"
                android:padding="8dp"
                android:textSize="14sp"
                android:layout_marginEnd="5dp"
                android:maxLines="1"
                android:ellipsize="end"/>

            <ImageButton
                android:id="@+id/btn_select_file"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button_primary"
                android:paddingHorizontal="6dp"
                android:src="@drawable/ic_upload_file"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/import_book_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_label"/>

                <EditText
                    android:id="@+id/et_book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_rounded"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:hint="@string/default_title"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author_label"/>

                <EditText
                    android:id="@+id/et_book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_rounded"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:hint="@string/default_author"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_label"/>

                <EditText
                    android:id="@+id/et_book_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_rounded"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:hint="@string/default_language"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:ellipsize="end"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="180dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="?attr/colorPrimary">

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cancel_button"
                style="@style/AppTheme.Button.Secondary"
                android:background="@drawable/button_secondary"/>

            <Button
                android:id="@+id/btn_import"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:padding="10dp"
                android:enabled="false"
                android:text="@string/import_button"
                style="@style/AppTheme.Button.Primary"
                android:background="@drawable/button_primary"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>