<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="20dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_login_form"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"/>

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColorHint="@color/grey"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"/>

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/password_hint"
            android:imeActionLabel="@string/action_login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:textColorHint="@color/grey"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btn_login_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_gravity="start"
                android:text="@string/local_user"
                android:layout_marginEnd="10dp"
                style="@style/AppTheme.Button.Secondary"
                android:background="@drawable/button_secondary"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_gravity="start"
                android:enabled="true"
                android:text="@string/login"
                style="@style/AppTheme.Button.Primary"
                android:background="@drawable/button_primary"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_switch_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:enabled="true"
            android:text="@string/create_account"
            android:textColor="@color/grey"
            style="@style/AppTheme.Button.Tertiary"
            android:backgroundTint="@android:color/transparent"/>
        
        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:padding="20dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_login_form"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"/>

        <EditText
            android:id="@+id/et_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColorHint="@color/grey"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"/>

        <EditText
            android:id="@+id/et_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/password_hint"
            android:imeActionLabel="@string/action_signup"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColorHint="@color/grey"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_label"/>

        <EditText
            android:id="@+id/et_signup_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_rounded"
            android:hint="@string/password_hint"
            android:imeActionLabel="@string/action_signup"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:textColorHint="@color/grey"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/btn_signup_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_gravity="start"
                android:enabled="true"
                android:text="@string/local_user"
                android:layout_marginEnd="10dp"
                android:theme="@style/AppTheme.Button.Secondary"
                android:background="@drawable/button_secondary"/>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_gravity="start"
                android:enabled="true"
                android:text="@string/signup"
                android:theme="@style/AppTheme.Button.Primary"
                android:background="@drawable/button_primary"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_switch_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:enabled="true"
            android:text="@string/have_account"
            android:textColor="@color/grey"
            style="@style/AppTheme.Button.Tertiary"
            android:backgroundTint="@android:color/transparent" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="64dp"/>

    </LinearLayout>

</LinearLayout>