<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cover"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/text_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:layout_gravity="end"
            android:text="@string/all"
            android:textColor="?attr/colorOnSecondary"
            android:background="@drawable/text_language"/>

        <TextView
            android:id="@+id/text_cards"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/default_cards"
            android:textColor="?android:attr/windowBackground"
            android:textSize="32sp"
            android:textAlignment="center"
            android:gravity="center"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_deck"
        android:textSize="12sp"
        android:maxLines="1"
        android:ellipsize="end"/>

</LinearLayout>