<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1.0"
    app:layout_constraintBottom_toTopOf="@+id/nav_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/study_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:minHeight="4dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="?attr/colorPrimary"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/card_front"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_word"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:text="@string/default_word"
                android:gravity="center"
                android:textSize="50sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_reveal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:layout_marginHorizontal="60dp"
                    android:text="@string/reveal"
                    style="@style/AppTheme.Button.Primary"
                    android:background="@drawable/button_primary"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_translation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:text="@string/default_translation"
                android:gravity="center"
                android:textSize="50sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_unknown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/unknown_button"
                    android:layout_marginEnd="10dp"
                    style="@style/AppTheme.Button.Primary"
                    android:background="@drawable/button_primary"
                    android:backgroundTint="@color/red"/>

                <Button
                    android:id="@+id/btn_known"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/known_button"
                    style="@style/AppTheme.Button.Primary"
                    android:background="@drawable/button_primary"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>